# rosbag_snapshot

./: README.md
rosbag_snapshot/: CMakeLists.txt  package.xml
rosbag_snapshot/include/rosbag_snapshot/: snapshotter.h
rosbag_snapshot/src/: snapshot.cpp  snapshotter.cpp
rosbag_snapshot/test/: snapshot.test  test_snapshot.py
rosbag_snapshot_msgs/: CMakeLists.txt  package.xml
rosbag_snapshot_msgs/msg/: SnapshotStatus.msg
rosbag_snapshot_msgs/srv/: TriggerSnapshot.srv
