<?xml version="1.0"?>
<package format="2">
  <name>rosbag_snapshot_msgs</name>
  <version>1.0.4</version>
  <description>Service and message definitions for rosbag_snapshot</description>

  <author email="kma1660+rsp@gmail.com">Kevin Allen</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosgraph_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
